--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "aws-sdk": "^2.759.0",
     "dotenv": "^8.2.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9"
+    "node-fetch": "^2.6.12"
   }
 }
