--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "request": "^2.88.2",
-    "request-promise-native": "^1.0.9"
+    "dotenv": "^8.2.0"
   }
 }
